# bbs100

./: .gitignore  ABOUT_GPL  CODING  CREDITS  ChangeLog  FAQ  INSTALL  README  SITES  UPGRADING  WHATSNEW
bbs100/: CREDITS  FAQ  UPGRADING
bbs100/etc/: login
bbs100/etc/feelings/: Blush  Burp
bbs100/rooms/0/: RoomData
bbs100/src/: BinAlloc.c  ConnResolv.c  Display.c  Feeling.c  FileFormat.c  HostMap.c  User.c  bufprintf.c  crc32.c  patchlist.c  state_friendlist.c  state_login.c  state_msg.c  state_room.c
bbs100/src/include/: FileFormat.h  Memory.h  Queue.h  SU_Passwd.h  SignalVector.h  Stats.h  StringIO.h  SymbolTable.h  Types.h  Wrapper.h  copyright.h  cstrerror.h  debug.h  inet.h  locales.h  main.h  screens.h  state_config.h  state_msg.h  state_sysop.h  sys_time.h
etc/: boss  crash  credits  first_login  help.config  help.roomconfig  help.std  help.sysop  hostmap  hosts_access  local_mods  logout  motd  nologin  param  reboot  shutdown  stats
etc/feelings/: Blush  Bounce  Happy_Happy_Joy_Joy  Smile
etc/help/: colors  friends  intro  more  msgs  other  profile  recipients  rooms  sysop  xmsg
etc/language/: login
etc/language/bbs100/: login
etc/language/nederlands/: keymap  login  notify  van_alles  who  yesno
etc/zoneinfo/: Amsterdam  Anchorage  Bangkok  Cairo  Chicago  London  Los_Angeles  Moscow  New_York  README  Rio_de_Janeiro  Sydney  Tokyo
rooms/0/: RoomData
rooms/1/: RoomData
rooms/2/: RoomData
src/: .gitignore  AtomicFile.c  BinAlloc.c  BufferedMsg.c  CachedFile.c  CallStack.c  Category.c  Conn.c  ConnData.c  ConnResolv.c  ConnUser.c  DataCmd.c  DirList.c  Display.c  Edit.c  Feeling.c  FileFormat.c  Hash.c  HostMap.c  Joined.c  KVPair.c  Lang.c  Linebuf.c  List.c  Makefile.in  Memory.c  Message.c  MsgIndex.c  NewUserLog.c  OnlineUser.c  PList.c  Param.c  Process.c  Queue.c  Room.c  SU_Passwd.c  Signal.c  SignalVector.c  Signals.c  Slub.c  (+64 more)
src/include/: AtomicFile.h  BinAlloc.h  BufferedMsg.h  CachedFile.h  CallStack.h  Category.h  Conn.h  ConnData.h  ConnResolv.h  ConnUser.h  DataCmd.h  DirList.h  Display.h  Edit.h  Feeling.h  FileFormat.h  Hash.h  HostMap.h  Joined.h  KVPair.h  Lang.h  Linebuf.h  List.h  Memory.h  Message.h  MsgIndex.h  NewUserLog.h  OnlineUser.h  PList.h  Param.h  Process.h  Queue.h  Room.h  SU_Passwd.h  Signal.h  SignalVector.h  Signals.h  Slub.h  Stats.h  StringIO.h  (+65 more)
